--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ footer {
 }
 
 .character-profile img {
-  max-width: 250px;
-  height: auto;
+  max-width: auto;
+  height: 300px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
