--- a/style.css
+++ b/style.css
@@ -62,10 +62,12 @@ footer {
 }
 
 .character-profile img {
-  max-width: auto;
-  height: 200pc;
+  max-width: 250px;
+  max-height: 400px; /* Limits how tall it can be */
+  height: auto;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  object-fit: contain;
 }
 
 .character-info {
